fixed small bug with timer end audio, and made the website more responsive on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,7 +3,6 @@
 @import "timer";
 @import "settings";
 
-
 *,
 *::after,
 *::before {
@@ -36,7 +35,7 @@ header {
 			color: $secondary-color;
 		}
 	}
-	
+
 	& ul li {
 		list-style: none;
 		font-size: 20px;
@@ -57,6 +56,7 @@ header {
 
 	& .nav-item {
 		padding: 1.5rem;
+		padding-top: 15px !important;
 	}
 }
 
@@ -107,11 +107,6 @@ header {
 	}
 }
 
-input::-webkit-inner-spin-button,
-input::-webkit-outer-spin-button {
-	appearance: none;
-}
-
 .bottom {
 	width: 100%;
 	height: 10%;
@@ -145,9 +140,52 @@ input::-webkit-outer-spin-button {
 }
 
 @media only screen and (max-width: 768px) {
+	header {
+		& #logo {
+			font-size: 37.5px;
+		}
+
+		& ul li {
+			font-size: 20px;
+		}
+	}
+
+	.nav-list {
+		& .nav-item {
+			padding: 7.5px;
+		}
+	}
 	.display {
-		font-size: 100px !important;
+		font-size: 120px !important;
 		height: 140px !important;
 	}
 
+	& .btn:hover {
+		& svg {
+			width: 100px !important;
+
+			& path#Rectangle-1 {
+				fill: #c0effa !important;
+			}
+		}
+	}
+
+	svg {
+		width: 100px !important;
+	}
+
+	.about-container {
+		font-size: 17.5px !important;
+		& .about-content {
+			width: 70%;
+		}
+	}
+	.subtitle {
+		font-size: 20px;
+	}
+	.opt-btn {
+		width: 100px;
+		height: 30px;
+		font-size: 12.5px !important;
+	}
 }
